# AgenticDataScience

./: Makefile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: .devcontainer  Dockerfile  devcontainer.json
.streamlit/: config.toml
apps/: pandas_app.py  sql_app.py  test_app.py
data/: config.py  crypto_data_providers.py  data_model.py  database_handler.py  init.sql  main.py
src/: __init__.py  orchestration.py
src/agents/: __init__.py  data_cleaning_agent.py  data_loader_tools_agent.py  data_visualization_agent.py  data_visualizer_agent.py  data_wrangling_agent.py  feature_engineering_agent.py  sql_agent.py  sql_database_agent.py  workflow_panner_agent.py  workflow_planner_agent.py
src/ds_agents/: __init__.py  eda_tools_agent.py
src/ml_agents/: __init__.py  h2o_ml_agent.py  mlflow_tools_agent.py  model_evaluation_agent.py
src/multiagents/: __init__.py  pandas_data_analyst.py  sql_data_analyst.py  supervisor_ds_team.py
src/parsers/: parsers.py
src/templates/: __init__.py  agent_templates.py
src/tools/: eda.py
src/utils/: logging.py  messages.py  regex.py  sandbox.py
